--- a/Bookshop_v5/Bookshop_v5.csproj
+++ b/Bookshop_v5/Bookshop_v5.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\DTO\" />
+    <Folder Include="Models\NewFolder\" />
   </ItemGroup>
 
 </Project>
