--- a/Bookshop_v5/Bookshop_v5.csproj
+++ b/Bookshop_v5/Bookshop_v5.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <Folder Include="Models\NewFolder\" />
+    <Folder Include="wwwroot\css\homepagecss\" />
+    <Folder Include="wwwroot\css\aboutuscss\" />
   </ItemGroup>
 
 </Project>
